Updated download feature

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </section>
 
       <section id="resume-section">
-        <a href="./assets/Vincent_Ofoka.pdf" download>
+        <a id="download-link" href="./assets/Vincent_Ofoka.pdf" download>
           <button id="resume-btn">
             <svg id="download-icon" viewBox="0 0 24 24">
               <path
