Fix: Updated page icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link rel="icon" type="image/x-icon" href="" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
     <script src="./script.js" type="text/javascript" defer></script>
 
     <title>Personal Website</title>
@@ -153,7 +153,7 @@
             <img id="img" src="" />
 
             <figcaption>
-              <span id="prev-arrow-box" onclick="changeCurrentImage('prev')" >
+              <span id="prev-arrow-box" onclick="changeCurrentImage('prev')">
                 <svg id="prev-arrow">
                   <path
                     id="prev-arrow-path"
@@ -265,8 +265,8 @@
           </li>
         </ul>
       </section>
-
-      <footer id="footer">&#169; 2025 Designed By Vincent</footer>
     </main>
+
+    <footer id="footer">&#169; 2025 Designed By Vincent</footer>
   </body>
 </html>
