--- a/index.html
+++ b/index.html
@@ -26,11 +26,35 @@
           <li class="nav-list-item"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+
+      <div id="menu-div">
+        <svg
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          id="menu-icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M10.5 6h9.75M10.5 6a1.5 1.5 0 1 1-3 0m3 0a1.5 1.5 0 1 0-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m-9.75 0h9.75"
+          />
+        </svg>
+
+        <ul id="menu-list">
+          <li>
+            <a href="#about">About</a>
+          </li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </header>
 
     <main id="main">
       <section id="animation-section">
-        <div id="animation-container">Hey i am vincent</div>
+        <div id="animation-container"></div>
 
         <figure id="profile-figure">
           <img id="profile-image" src="./assets/images/1751659282891.jpg" />
@@ -150,6 +174,9 @@
 
         <div id="lightbox-container">
           <figure id="figure">
+            <span id="slide-pagination">
+              <span id="slide-index"></span> / <span>8</span>
+            </span>
             <img id="img" src="" />
 
             <figcaption>
