--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <title>Personal Website</title>
   </head>
 
-  <!-- PICTURES AND CONTACT -->
-
   <body>
     <header class="header">
       <h1 class="welcome-icon">👋</h1>
@@ -26,6 +24,8 @@
           <li class="nav-list-item"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+
+      <!-- For Smaller screens -->
 
       <div id="menu-div">
         <svg
